<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/container_cmd_header"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <EditText
            android:id="@+id/title_seleccion__header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:gravity="center"
            android:text="@string/title_basic_cmd_plan_header"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/tot_effort_points_selection_header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tot_effor_points_field_basic_cmd_plan"/>
            <EditText
                android:id="@+id/tot_cal_selection__header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tot_cal_field_basic_cmd_plan"/>
            <EditText
                android:id="@+id/tot_duration_selection_header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tot_duration_basic_cmd_plan"/>
            <EditText
                android:id="@+id/tot_composition_type_selection_header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/breakdown_exercise_type_basic_cmd_plan"/>
        </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40">
        <EditText
            android:id="@+id/description_selection_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:maxLines="10"
            android:singleLine="false"
            android:text="@string/description_basic_cmd_plan_header"/>
    </ScrollView>
</LinearLayout>
